# algorithms-rust

./: Cargo.toml  LICENSE  README.md
examples/: recursion.rs  search.rs  searching.rs  sort.rs
src/: lib.rs  recursion.rs  search.rs  sort.rs
src/recursion/: find_biggest.rs  sum.rs
src/search/: binary.rs  smallest.rs
src/sort/: quick.rs  selection.rs
